<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">


    <LinearLayout
        android:id="@+id/include2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/authkit_id_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <include layout="@layout/container_app_logo" />
    </LinearLayout>


    <TextView
        android:id="@+id/authkit_id_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:transitionName="@string/tag_app_name"
        app:layout_constraintBottom_toTopOf="@+id/layout_user_consent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_user_consent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/policy_terms"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/txt_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/policy"
                    android:textColor="@color/optheme"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" and "
                    android:textColor="@color/optheme"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textColor="@color/optheme"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/authkit_id_button_default"
            android:layout_width="@dimen/authkit_button_width"
            android:layout_height="@dimen/authkit_button_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="Get Started"
            android:textAllCaps="false"
            android:transitionName="@string/tag_button_default" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>